--- a/apps/web/.env.local
+++ b/apps/web/.env.local
@@ -1,4 +1,4 @@
 NEXTAUTH_SECRET=dev_super_secret_change_me
 NEXTAUTH_URL=http://localhost:3000
 API_BASE_URL=http://localhost:4000
-MAPBOX_TOKEN=YOUR_MAPBOX_PUBLIC_TOKEN
+MAPBOX_TOKEN=add_later
